--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-numpy~=1.20.3
-scipy~=1.7.1
-matplotlib~=3.5.2
-numba~=0.55.1
+python~=3.9
+numpy~=1.23.5
+scipy~=1.10.0
+numba~=0.56.4
+matplotlib~=3.7.1
